[package]
name = "valo"
description = "A Program to Control Backlights (and other Hardware Lights) in GNU/Linux"
version = "0.2.2"
authors = ["xrelkd 46590321+xrelkd@users.noreply.github.com"]
edition = "2018"

[dependencies]
async-trait = "0.1"
futures = "0.3"
lazy_static = "1"
snafu = "0.6"
structopt = "0.3"
tokio = { version = "0.2", features = ["fs", "time", "signal"] }
